[package]
name = "aphelios_tts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aphelios_core = { path = "../aphelios_core" }

# Audio processing dependencies
ndarray = { workspace = true }
hound = "3.5"
lazy_static = "1.4"
rodio = "0.20"

serde_json = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
slint = { workspace = true }

clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }

rand = { workspace = true }
indicatif = { workspace = true }

ort = { workspace = true }
tokenizers = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }

toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-indicatif = { workspace = true }

candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

regex = { workspace = true }
#mistralrs = { workspace = true }

reqwest = { workspace = true }
once_cell = { workspace = true }
epub = { workspace = true }

qwen_tts = { workspace = true }
usearch = { workspace = true }

fastembed = { workspace = true }
rusqlite = { workspace = true }
glob = { workspace = true }
hayro = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
tracing-test = { workspace = true }
imara-diff = { workspace = true }
jieba-rs = { workspace = true }
hf-hub = { workspace = true }
rustfft = { workspace = true }
num-complex = { workspace = true }
itertools = { workspace = true }
eyre = { workspace = true }
symphonia = { workspace = true }
byteorder = { workspace = true }
rubato = { workspace = true }
tempfile = { workspace = true }
strum_macros = { workspace = true }

[features]
metal = [
    "aphelios_core/metal",
    "candle-core/metal",
    "candle-core/accelerate",
    "candle-nn/metal",
    "candle-nn/accelerate",
    "candle-transformers/metal",
    "candle-transformers/accelerate",
    #"mistralrs/metal",
    "ort/coreml",
    "qwen_tts/metal",
    "qwen_tts/accelerate",
    "qwen_tts/audio-loading",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    #"mistralrs/cuda",
    "ort/cuda",
    "qwen_tts/cuda",
    "qwen_tts/audio-loading",
]
hub = []
profiling = []
flash-attn = []
