[package]
name = "aphelios_ui"
version = "0.1.0"
edition = "2024"

[dependencies]

aphelios_core = { path = "../aphelios_core" }
anyhow = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }

[package.metadata.slint]
assets = ["assets/**"]

[features]
metal = [
]