[package]
name = "aphelios_wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]

candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
num-traits = { workspace = true }
tokenizers = { workspace = true, default-features = false, features = ["unstable_wasm"] }
pollster = "0.3.0"
env_logger = "0.11.3"

# App crates.
anyhow = { workspace = true }
byteorder = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
image = { workspace = true }

# Wasm specific crates.
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo = "0.11"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.6.0"
web-time = { workspace = true }

js-sys = "0.3.69"
wasm-logger = "0.2.0"
thiserror = "1.0.61"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
